@@ -1,3 +1,7 @@
+
+- added getTagAttrib() helper (#97)
+
+
 Version 0.2.6
 -------------
 
